[project]
name = "monthly-report"
version = "0.1.0"
description = "Автоматическое формирование ежемесячных отчётов из PostgreSQL в Excel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.9.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.0.0",
    "psycopg2>=2.9.11",
]
